[project]
name = "comfyui_nodes"
description = "Nodes:IW SaveString, IW PrintString, IW ReplaceString, IW StringNode, IW StringConcat, IW TokenizerVocab, IW JsonPickItem."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/iwanders/ComfyUI_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_nodes"
Icon = ""
